--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "normalize.css": "^8.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
