--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.4",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
